// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentTestView assessment view, isScanning is false 1`] = `
"<Fragment>
  <ScanIncompleteWarning deps={{...}} warnings={[undefined]} warningConfiguration={{...}} test={-1} />
  <AssessmentView deps={{...}} isScanning={false} isEnabled={false} assessmentNavState={{...}} assessmentInstanceTableHandler={{...}} assessmentData={{...}} currentTarget={{...}} prevTarget={[undefined]} assessmentDefaultMessageGenerator={[undefined]} assessmentTestResult={{...}} featureFlagStoreData={{...}} pathSnippetStoreData={{...}} switcherNavConfiguration={{...}} />
</Fragment>"
`;

exports[`AssessmentTestView assessment view, isScanning is true 1`] = `
"<Fragment>
  <ScanIncompleteWarning deps={{...}} warnings={[undefined]} warningConfiguration={{...}} test={-1} />
  <AssessmentView deps={{...}} isScanning={true} isEnabled={false} assessmentNavState={{...}} assessmentInstanceTableHandler={{...}} assessmentData={{...}} currentTarget={{...}} prevTarget={[undefined]} assessmentDefaultMessageGenerator={[undefined]} assessmentTestResult={{...}} featureFlagStoreData={{...}} pathSnippetStoreData={{...}} switcherNavConfiguration={{...}} />
</Fragment>"
`;
